--- a/app/reservation/reservation.component.html
+++ b/app/reservation/reservation.component.html
@@ -6,27 +6,65 @@
                 <drawer-content></drawer-content>
             </StackLayout>
         </ScrollView>
-        <ScrollView orientation="vertical" tkMainContent class="page">
-            <GridLayout class="m-5" rows="auto auto auto auto" columns="*, *" [formGroup]="reservation">
-                <Label class="h3 m-15" row="0" col="0" text="No. of Guests" textWrap="true"></Label>
-                <TextField class="input input-border" id="textGuests"
-                hint="Enter Number of Guests" [text]=''
-                (tap) = "createModalView('guest')"
-                (textChange)="onGuestChange($event)"
-                row="0" col="1" formControlName="guests"></TextField>
+        <StackLayout tkMainContent>
 
-                <Label class="h3 m-15" row="1" col="0" text="Smoking?" textWrap="true"></Label>
-                <Switch class="m-15" row="1" col="1" checked="false"
-                    (checkedChange)="onSmokingChecked($event)" formControlName="smoking"></Switch>
-                <Label class="h3 m-15" row="2" col="0" text="Date and Time" textWrap="true"></Label>
-                <TextField class="input input-border" id="textDateTime"
-                hint="Enter Date and Time" [text]=''
-                (tap)="createModalView('date-time')"
-                (textChange)="onDateTimeChange($event)"
-                row="2" col="1" formControlName="dateTime"></TextField>
+            <StackLayout id="reservationForm" [visibility]="showReservationForm ? 'visible' : 'collapsed'" orientation="vertical">
+
+                <GridLayout class="m-5" rows="auto auto auto auto" columns="*, *" [formGroup]="reserveTable">
+                    <Label class="h3 m-15" row="0" col="0" text="No. of Guests" textWrap="true"></Label>
+                    <TextField class="input input-border" id="textGuests"
+                        hint="Enter Number of Guests" [text]=''
+                        (tap) = "createModalView('guest')"
+                        (textChange)="onGuestChange($event)"
+                        row="0" col="1" formControlName="guests">
+                    </TextField>
+
+                    <Label class="h3 m-15" row="1" col="0" text="Smoking?" textWrap="true"></Label>
+                    <Switch class="m-15" row="1" col="1" checked="false"
+                        (checkedChange)="onSmokingChecked($event)" formControlName="smoking">
+                    </Switch>
+
+                    <Label class="h3 m-15" row="2" col="0" text="Date and Time" textWrap="true"></Label>
+                    <TextField class="input input-border" id="textDateTime"
+                        hint="Enter Date and Time" [text]=''
+                        (tap)="createModalView('date-time')"
+                        (textChange)="onDateTimeChange($event)"
+                        row="2" col="1" formControlName="dateTime">
+                    </TextField>
                 
-                <Button class="btn btn-primary btn-active m-15" row="3" col="0"
-                    text="Submit" (tap)="onSubmit()"></Button>
-            </GridLayout>
-        </ScrollView>
+                    <Button class="btn btn-primary btn-active m-15" [isEnabled]="reserveTable.valid" row="3" col="0"
+                        text="Submit" (tap)="onSubmit()">
+                    </Button>
+                </GridLayout>
+            </StackLayout>
+        
+            <StackLayout id="reservationData" [visibility]="showReservationData ? 'visible' : 'collapsed'" orientation="vertical">
+                    
+                <ListView id="reservationList" height="900" [items]="res" class="list-group p-10">
+                    <ng-template let-reservation="item">
+                        <StackLayout class="list-group-item">
+                            <GridLayout class="m-5" rows="auto auto auto auto" columns="*, *" [formGroup]="reserveTable">
+                                    
+                                <Label class="h3 m-15" row="0" col="0" text="No. of Guests" textWrap="true"></Label>
+                                <Label class="h3 m-15" row="0" col="1" [text]="reservation.guests" textWrap="true"></Label>
+                                    
+                                <Label class="h3 m-15" row="1" col="0" text="Smoking?" textWrap="true"></Label>
+                                <Label class="h3 m-15" row="1" col="1" [text]="reservation.smoking" textWrap="true"></Label>
+
+                                <Label class="h3 m-15" row="2" col="0" text="Date and Time" textWrap="true"></Label>
+                                <Label class="h3 m-15" row="2" col="1" [text]="reservation.dateTime | date: 'medium'" textWrap="true"></Label>
+
+                                <Button class="btn btn-primary btn-active m-15" row="3" col="0"
+                                    text="Back to Reservation" (tap)="onBackReserve()">
+                                </Button>
+                                    
+                            </GridLayout>
+                        </StackLayout>
+                    </ng-template>
+                </ListView>
+                    
+            </StackLayout>
+
+        </StackLayout>
+    
     </RadSideDrawer>
