--- a/app/contact/contact.component.html
+++ b/app/contact/contact.component.html
@@ -20,6 +20,10 @@
             <Label class="sub-title" text="Tel: +852 1234 5678" textWrap="true"></Label>
             <Label class="sub-title" text="Fax: +852 8765 4321" textWrap="true"></Label>
             <Label class="sub-title" text="Email:confusion@food.net" textWrap="true"></Label> 
+            <GridLayout orientation="horizontal" rows="*" columns="*, *" class="m-t-20">
+                <Button row="0" col="0" [text]="('fa-phone' | fonticon) + ' Call'" class="btn btn-rounded-sm btn-outline no-border fa "></Button>
+                <Button row="0" col="1" [text]="('fa-envelope-o' | fonticon) + ' Email'" class="btn btn-rounded-sm btn-outline no-border fa" (tap)="sendEmail()"></Button>
+            </GridLayout>  
         </StackLayout>
     </GridLayout>
 </ScrollView>
